# elastic-documentstore

./: .gitignore  README.md  docker-compose.yaml  es_backend.py  get-movies  import-movies  pyproject.toml  tox.ini
.github/workflows/: pr.yaml
elasticsearch_haystack/: __init__.py  documentstore.py
tests/: test_elasticsearchstore.py
